WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100335
webkitRegionLayoutUpdate is incorrectly named
https://bugs.webkit.org/show_bug.cgi?id=100335
Summary
webkitRegionLayoutUpdate is incorrectly named
Adam Barth
Reported
2012-10-24 23:27:25 PDT
webkitRegionLayoutUpdate is incorrectly named
Attachments
Patch
(10.88 KB, patch)
2012-10-24 23:28 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2012-10-24 23:28:04 PDT
Created
attachment 170559
[details]
Patch
Eric Seidel (no email)
Comment 2
2012-10-24 23:32:42 PDT
I take it event names are case-sensitive?
Adam Barth
Comment 3
2012-10-24 23:33:56 PDT
> I take it event names are case-sensitive?
Yep.
Adam Barth
Comment 4
2012-10-24 23:34:36 PDT
Some old events, like DOMContentLoaded, use mixed case, but the prevailing style is to use all lower case.
Adam Barth
Comment 5
2012-10-24 23:44:47 PDT
Looks like the spec is wrong too:
http://dev.w3.org/csswg/css3-regions/#region-flow-layout-events
Adam Barth
Comment 6
2012-10-25 00:32:02 PDT
> Looks like the spec is wrong too:
"wrong" is probably too strong a term. Rather, I should say that the naming of this event isn't consistent with the rest of the platform.
Alan Stearns
Comment 7
2012-11-05 13:17:00 PST
I've updated the spec to use 'regionlayoutupdate'
Adam Barth
Comment 8
2012-11-05 14:07:06 PST
Thanks Alan!
WebKit Review Bot
Comment 9
2012-11-05 14:32:33 PST
Comment on
attachment 170559
[details]
Patch Clearing flags on attachment: 170559 Committed
r133527
: <
http://trac.webkit.org/changeset/133527
>
WebKit Review Bot
Comment 10
2012-11-05 14:32:37 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug