webkitRegionLayoutUpdate is incorrectly named https://bugs.webkit.org/show_bug.cgi?id=100335

Reviewed by Ojan Vafai.

Source/WebCore:

DOM event names are supposed to be lower case.

* dom/EventNames.h:
(WebCore):
* dom/WebKitNamedFlow.cpp:
(WebCore::WebKitNamedFlow::dispatchRegionLayoutUpdateEvent):

LayoutTests:

Update tests to use the proper name.

* fast/regions/webkit-named-flow-event-add-to-flow.html:
* fast/regions/webkit-named-flow-event-no-regions.html:
* fast/regions/webkit-named-flow-event-remove-from-dom.html:
* fast/regions/webkit-named-flow-event-remove-from-flow.html:
* fast/regions/webkit-named-flow-event-target.html:
* fast/regions/webkit-named-flow-event-to-null.html:
* fast/regions/webkit-named-flow-event.html:


git-svn-id: svn://svn.chromium.org/blink/trunk@133527 bbb929c8-8fbe-4397-9dbb-9b2b20218538